fix: menu fonts not working in dark mode

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -174,6 +174,10 @@ html[data-theme=dark] {
   thead {
     background-color: #343434;
   }
+
+  .menu__link{
+    color: #ddd;
+  }
 }
 
 .cta-btn {
